# sol

./: .envrc  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  a.out  desired.ssa  flake.nix  init.lua  lib.nix  out.js  out.s  spec.md  test  test.c  test.ssa
examples/: fibonacci.sol  list.sol  loop.sol  mock.sol  std.sol  struct.sol
solc/: Cargo.toml
solc-lexer/: Cargo.toml
solc-macros/: Cargo.toml
solc-parser/: Cargo.toml
solc-test/: Cargo.toml
solc/src/: analyzer.rs  ast.rs  ext.rs  interner.rs  lexer.rs  lib.rs  main.rs  num.rs  number.rs  parser.rs  source.rs  traits.rs
solc/src/ast/: fmt.rs  mod.rs  visit.rs
solc/src/codegen/: command.rs  mod.rs  temp_dir.rs
solc/src/codegen/c/: ast.rs  compiler.rs  mod.rs
solc/src/codegen/c/include/: gc.h  string.h
solc/src/codegen/qbe/: build.rs  compile.rs  fmt.rs  lower.rs  mod.rs
solc/src/hir/: collect.rs  lower.rs  mod.rs
solc/src/lexer/: lexer.rs  memchr.rs  mod.rs  num.rs  source.rs  test.rs  token.rs  unescape.rs
solc/src/mir/: builder.rs  fmt.rs  lower.rs  mod.rs
solc/src/parser/: ast.rs  mod.rs  num.rs  parser.rs
solc/src/type_checker/: checker.rs  collect.rs  interner.rs  mangle.rs  mod.rs  ty.rs
specs/: fibonacci.nl  fibonacci.sol  list.sol  playground.nl  struct.nl  struct.sol
src/: analyzer.rs  ast.rs  codegen.rs  hir.rs  lexer.rs  loc.rs  main.rs  parser.rs  ty.rs
tests/: a.out  fibonacci  fibonacci.c  fibonacci.nl  playground.nl
tree-sitter-newlang/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  default.nix  go.mod  grammar.js  package.json  pyproject.toml  result  setup.py  (+1 more)
(+57 files in other folders)
