[workspace]
resolver = "3"
members = ["solc", "solc-lexer", "solc-macros", "solc-parser"]

[workspace.dependencies]
solc-macros = { path = "solc-macros" }
solc-lexer = { path = "solc-lexer" }
solc-parser = { path = "solc-parser" }

thiserror = "2"
miette = { version = "7", features = [
  "derive",
  "fancy",
], default-features = false }
