[package]
name = "solc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "solc"
path = "src/main.rs"

[dependencies]
solc-macros = { workspace = true }
solc-lexer = { workspace = true }
solc-parser = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true }
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
] }
wyhash2 = "0.2"
