[package]
name = "solc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "solc"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
] }
strum = { version = "0.28.0", features = ["derive"] }
either = "1.15.0"
smallvec = "1.15.1"
